fix: 🐛  z-index issue fix

--- a/apps/website/src/style.css
+++ b/apps/website/src/style.css
@@ -1151,6 +1151,7 @@ img.x-icon {
 }
 
 .overlay.display {
+  z-index: 200;
   display: block;
   opacity: 0;
 }
